Fixed issue with footer jumping around on different sizes of screens

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,6 +7,8 @@ a{
 }
 
 body{
+  /*background-image: url("assets/drop1.jpg");
+  background-size: cover;*/
   font-family: helvetica;
   margin: 0;
 }
@@ -136,11 +138,12 @@ tr:nth-child(-3n+6){
 }
 
 .footer_wrapper {
+  background: white;
   margin: 0;
   height: 6.1em;
   width: 100%;
   bottom: 0;
-  position: absolute;
+  position: fixed;;
 }
 
 .our_name{
